--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Today I Learned...
+title: The Salamander
 email: your-email@domain.com
-description: I want to capture at least one piece of new information I learn every day. I'll write about it here.
+description: Tech. Geek. Design. And whatever else I learn about.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://clapinton.github.io" # the base hostname & protocol for your site
 twitter_username: clapinton
