Adding Disqus integration. Setting comments flag to true on all posts. Also setting layout flag to default_post on all posts.

--- a/_config.yml
+++ b/_config.yml
@@ -16,3 +16,13 @@ github_username:  clapinton
 
 # Build settings
 markdown: kramdown
+
+# Defaults settings
+defaults:
+  -
+    scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: default_post
+      comments: true
